Disable Kraken tab

--- a/grid-control/ui/mainwindow.ui
+++ b/grid-control/ui/mainwindow.ui
@@ -82,7 +82,7 @@ QTreeWidget {
      <enum>QTabWidget::Triangular</enum>
     </property>
     <property name="currentIndex">
-     <number>4</number>
+     <number>0</number>
     </property>
     <property name="iconSize">
      <size>
@@ -5080,7 +5080,10 @@ QTreeWidget {
       </widget>
      </widget>
     </widget>
-    <widget class="QWidget" name="tab">
+    <widget class="QWidget" name="tabKraken">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
      <attribute name="title">
       <string>Kraken X61 EXPERIMENTAL</string>
      </attribute>
